<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MoodStatusActivity"
    tools:showIn="@layout/activity_mood_status">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">


            <TextView
                android:id="@+id/txtHow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:gravity="center_horizontal"
                android:text="How you feel right now?"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSituation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorEditTextStudentInfo"
                android:textStyle="bold"
                android:text="TextView"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/txtHow"
                 />

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="30sp"
                android:paddingLeft="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSituation">

                <RadioButton
                    android:id="@+id/notatall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/NotAtAll" />

                <RadioButton
                    android:id="@+id/alittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/ALittle" />

                <RadioButton
                    android:id="@+id/moderately"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/Moderately" />

                <RadioButton
                    android:id="@+id/quiteabit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/QuiteABit" />

                <RadioButton
                    android:id="@+id/extremely"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/Extremely" />


            </RadioGroup>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="40sp"
                android:text="Next"
                android:background="@drawable/my_button"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/rdGroup"
                />

        <Button
            android:id="@+id/btnMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="30sp"
            android:textColor="@color/LightSlateGray"
            android:text="Meaning?"
            android:background="@drawable/my_button"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnNext"
            />

        </TableLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>